plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.4'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'ru.nsu.fit.evdokimova'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	implementation 'com.github.docker-java:docker-java:3.3.0'
	implementation 'com.github.docker-java:docker-java-transport-httpclient5:3.3.0'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'
	implementation 'org.apache.httpcomponents.client5:httpclient5:5.4.3'
	implementation 'org.eclipse.jgit:org.eclipse.jgit:7.2.0.202503040940-r'
}

tasks.named('test') {
	useJUnitPlatform()
}